# contingency-dsl-paper

./: .gitignore  README.ja.md  README.md  pyproject.toml
src/contingency_dsl2procedure/: __init__.py  __main__.py  ast_types.py  cli.py  compiler.py  references.py  style.py
src/contingency_dsl2procedure/sections/: __init__.py  apparatus.py  procedure.py
src/contingency_dsl2procedure/sections/visitors/: __init__.py  atomic.py  compound.py  experiment_layer.py  limited_hold.py  respondent.py  special.py  stateful.py  trial_based.py
src/contingency_dsl_paper/: __init__.py  __main__.py  ast_types.py  cli.py  model.py  vocabulary.py
src/contingency_dsl_paper/sections/: annotation_expander.py  subjects.py
src/contingency_dsl_paper/sections/visitors/: _common.py  aversive.py  modifier.py  mts_shorthand.py  second_order.py
tests/: test_annotations.py  test_cli.py  test_compiler.py  test_conformance_smoke.py  test_extended_ast_coverage.py  test_extensibility.py  test_modifier_aversive.py  test_schedule_coverage.py  test_v0_1_0_coverage.py  test_vocabulary.py
