[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "contingency-dsl-paper"
dynamic = ["version"]
description = "Compiler from contingency-dsl AST to academic paper Method sections (JEAB/JABA style)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8", "pytest-cov"]

[project.scripts]
contingency-dsl-paper = "contingency_dsl_paper.cli:main"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"

[tool.hatch.build.hooks.vcs]
version-file = "src/contingency_dsl_paper/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/contingency_dsl_paper"]

[tool.pytest.ini_options]
testpaths = ["tests"]
