[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "contingency-dsl2procedure"
dynamic = ["version"]
description = "Compiler from contingency-dsl AST to academic paper Method sections (JEAB/JABA style)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8", "pytest-cov"]

[project.scripts]
contingency-dsl2procedure = "contingency_dsl2procedure.cli:main"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"

[tool.hatch.build.hooks.vcs]
version-file = "src/contingency_dsl2procedure/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/contingency_dsl2procedure"]

[tool.pytest.ini_options]
testpaths = ["tests"]
